Mon Sep 15 13:22:40 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Added some optimizations to the circular dependency tree
          generation code.

Mon Sep 15 06:42:28 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Added a check in the dependency sorter for an undefined dependency
          value (this only happended with the vc7 and vc71 types).

Fri Sep 12 13:31:50 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Updated the code to detect and drop circular dependencies.  The
          original code was wrong and would drop dependencies that didn't
          need to be.

Fri Sep 12 11:51:17 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * Kokyu/Kokyu.dsp:

          Fixed setting for release configuration.

Fri Sep 12 11:38:57 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Test_Output.dsp:
        * tests/UUIDTest.dsp:

          Fixed settings for the release configuration.

Fri Sep 12 11:36:17 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Modified the AIX compiler support to be a rule, instead of
          modifying $(COMPILE.cc), that will be run before building the all
          target.

Fri Sep 12 10:56:02 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/DLL_Test_Impl.dsp:
        * tests/DLL_Test.dsp:

          Turned on RTTI for all configurations.

Thu Sep 11 06:39:23 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Fixed a bug with the automatic project dependencies that was
          related to directories and the location that mwc.pl was run.

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Added support for poor AIX compilers that don't deal with